# Qt-Mandelbrot

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt-Mandelbrot.pro  tile.cpp  tile.h  tile_update.cpp  tile_update.cu  tile_update.h  tilestorage.cpp  tilestorage.h  timer.h
